# product-app

./: .gitignore  README.md  application_data.json  db.json  manage.py  pyproject.toml  requirements.txt
core/management/commands/: create_data.py
core/managers/: __init__.py  estoque_entrada_manager.py  estoque_saida_manager.py
estoque/: admin.py  api.py  models.py  schema.py
estoque/migrations/: 0001_initial.py
fixtures/: product.json  user.json
product/: admin.py  api.py  forms.py  models.py  schema.py  urls.py  views.py
product/migrations/: 0001_initial.py  0002_color_size_remove_product_color_remove_product_size_and_more.py  0002_remove_product_colors.py  0003_alter_product_price.py  0003_remove_color_size.py  0004_alter_product_options_product_color_product_image_and_more.py  0004_product_image.py  0004_product_imagem.py  0005_product_estoque_product_estoque_minimo.py  0005_remove_product_image_image.py  0005_rename_imagem_product_image.py  0006_alter_product_image.py  0006_remove_product_estoque_minimo_alter_product_estoque.py  0007_alter_product_image.py  0008_merge_0004_product_image_0007_alter_product_image.py  0009_remove_product_image_image.py  0010_image_size.py  0011_image_name.py  0012_alter_image_product.py
productList/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: style.css
static/js/: product.js
templates/: base.html  index.html  product.html
